# django-rest-api

./: pyproject.toml
djangorestapi/: asgi.py  settings.py  urls.py  wsgi.py
